--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ license = "MIT"
 build = "build.rs"
 
 [dependencies]
-rusqlite = "0.37.0"
+cfg-if = "1.0.3"
+chrono = { version = "0.4.42", features = ["serde"] }
+dirs = "6.0.0"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
+serde = "1.0.228"
+serde_derive = "1.0.228"
 slint = "1.13.1"
 
 [build-dependencies]
